fix: remove vertical spacing for timeline titles inside bubbles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,7 @@ ul li #nav-subscribe-button {
 }
 
 /* Timeline Section */
-#timeline h3 {
+#timeline > h3 {
     padding-bottom: 4rem;
 }
 .timeline-element-container {
